# session_activity_watcher

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  grove.toml  install.sh
.beads/: issues.jsonl
.github/workflows/: release.yml
.grove/: grove.db-shm  grove.db-wal
.grove/logs/: runtime.jsonl
.grove/prompts/: prompt-run-saw-132-20260325T010732045.json  prompt-run-saw-146-20260324T151635367.json  prompt-run-saw-16i-20260325T010752678.json  prompt-run-saw-1ch-20260324T054120045.json  prompt-run-saw-1ch-20260324T121054586.json  prompt-run-saw-1ch-20260324T123447689.json  prompt-run-saw-1fk-20260324T162731802.json  prompt-run-saw-1fk-20260324T171855632.json  prompt-run-saw-1o3-20260324T152206210.json  prompt-run-saw-1qj-20260324T152621528.json  prompt-run-saw-1rb-20260324T173549998.json  prompt-run-saw-1rb-20260324T235105451.json  prompt-run-saw-1rb-20260324T235846205.json  prompt-run-saw-1rb-20260325T002531664.json  prompt-run-saw-1sa-20260324T152655124.json  prompt-run-saw-26a-20260325T003455383.json  prompt-run-saw-26l-20260324T163041937.json  prompt-run-saw-26o-20260324T151635344.json  prompt-run-saw-28i-20260325T011403776.json  prompt-run-saw-28i-20260325T052139588.json  prompt-run-saw-28i-20260325T055356075.json  prompt-run-saw-29v-20260324T125416550.json  prompt-run-saw-2cf-20260324T151635364.json  prompt-run-saw-2cj-20260324T125416538.json  prompt-run-saw-2gd-20260324T164722184.json  prompt-run-saw-2qo-20260324T165125575.json  prompt-run-saw-2to-20260325T003455404.json  prompt-run-saw-2ty-20260324T151635357.json  (+45 more)
crates/saw-cli/: Cargo.toml
crates/saw-cli/src/cmd/: common.rs  config.rs  hook.rs  status.rs  watch.rs
crates/saw-cli/src/tui/widgets/: file_activity.rs  metrics_panel.rs  status_bar.rs
crates/saw-daemon/: Cargo.toml
crates/saw-daemon/src/: alerter.rs  event_bus.rs  jsonl_tail.rs  lib.rs  process_monitor.rs  runtime.rs  state_machine.rs  store.rs  watcher.rs
src/: main.rs
tests/: MANUAL_TEST_SCENARIOS.md  loop_detector_tests.rs  metrics_tests.rs
(+92 files in other folders)
