[package]
name = "saw"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/saw-core", "crates/saw-daemon"]
resolver = "2"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
nix = { version = "0.29", features = ["signal", "process"] }
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
saw-core = { path = "crates/saw-core" }
saw-daemon = { path = "crates/saw-daemon" }
sysinfo = "0.38"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
saw-daemon = { path = "crates/saw-daemon" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[[test]]
name = "jsonl_tail"
path = "tests/integration/jsonl_tail.rs"
