[package]
name = "saw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dirs = "5"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
nix = { version = "0.29", default-features = false, features = ["signal", "process"] }
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
saw-core = { path = "../saw-core" }
saw-daemon = { path = "../saw-daemon" }
sysinfo = "0.38"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "time"] }
